--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -1,23 +1,3 @@
-html {
-  font-family: Georgia, Cambria, "Times New Roman", serif; }
+html{font-family:Georgia,Cambria,"Times New Roman",serif}a{color:#7CE577}p{font-family:Georgia,Cambria,"Times New Roman",serif;border-radius:5px}body{font-family:Georgia,Cambria,"Times New Roman",serif;color:#A0CCDA}input[type="password"],input[type="button"],input[type="text"],textarea{font-family:Georgia,Cambria,"Times New Roman",serif;color:#A0CCDA;border-color:#A0CCDA;background-color:#fff;border-radius:5px}img{border-radius:5px}
 
-a {
-  color: #7CE577; }
-
-p {
-  font-family: Georgia, Cambria, "Times New Roman", serif;
-  border-radius: 5px; }
-
-body {
-  font-family: Georgia, Cambria, "Times New Roman", serif;
-  color: #A0CCDA; }
-
-input[type="password"], input[type="button"], input[type="text"], textarea {
-  font-family: Georgia, Cambria, "Times New Roman", serif;
-  color: #A0CCDA;
-  border-color: #A0CCDA;
-  background-color: white;
-  border-radius: 5px; }
-
-img {
-  border-radius: 5px; }
+/*# sourceMappingURL=style.css.map */
